fix(Stock): adjusted margins for additional stock info on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -461,7 +461,7 @@ Single Stock
   display: flex;
   width: 100%;
   margin-top: 1rem;
-  margin-left: 0.75rem;
+  margin-left: 0.25rem;
   height: 55px;
   justify-content: space-around;
   color: grey;
@@ -469,7 +469,7 @@ Single Stock
 }
 .stock-additional {
   font-weight: 500;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   padding: 0 1rem;
 }
 .stock-additional:nth-child(2) {
@@ -477,7 +477,17 @@ Single Stock
   border-right: 1px solid rgb(189, 185, 185);
 }
 .additional-title {
-  margin-right: 2rem;
+  margin-right: 1rem;
+}
+@media screen and (min-width: 400px) {
+  .stock-additional-info {
+    justify-content: center;
+    margin-left: 0;
+  }
+  .stock-additional {
+    font-size: 0.8rem;
+    padding: 0 1.25rem;
+  }
 }
 @media screen and (min-width: 600px) {
   .stock-additional-info {
